--- a/frontend/management/templates/patient/add_patient.html
+++ b/frontend/management/templates/patient/add_patient.html
@@ -8,6 +8,7 @@
             <div class="list-group">
                 <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action " id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action active-tab" id="addPatient">Add Patient</a>
+                <a href="{% url 'edit_patient' %}" class="list-group-item list-group-item-action" id="editAppointments">Edit Patient</a>
                 <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action" id="viewAppointments">All Appointments</a>
                 <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action " id="makeAppointment">Create Appointment</a>
                 <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action" id="updateAppointment">Update Appointment</a>
@@ -74,7 +75,7 @@
                                         <select class="form-control" id="doctor_id" name="doctor_id">
                                             <option value="" disabled selected>Select</option>
                                             {% for doctor in doctors %}
-                                                <option value="{{ doctor.EmployeeID }}">{{ doctor.FirstName }} {{ doctor.LastName }}</option>
+                                                <option value="{{ doctor.EmployeeID }}">{{ doctor.EmployeeID }}</option>
                                             {% endfor %}
                                         </select>
                                     </div></div></div>
