--- a/frontend/management/templates/patient/update_appointment.html
+++ b/frontend/management/templates/patient/update_appointment.html
@@ -8,6 +8,7 @@
             <div class="list-group">
                 <a href="{% url 'view_patient' %}" class="list-group-item list-group-item-action " id="viewPatients">All Patients</a>
                 <a href="{% url 'add_patient' %}" class="list-group-item list-group-item-action" id="addPatient">Add Patient</a>
+                <a href="{% url 'edit_patient' %}" class="list-group-item list-group-item-action" id="editAppointments">Edit Patient</a>
                 <a href="{% url 'view_appointment' %}" class="list-group-item list-group-item-action" id="viewAppointments">All Appointments</a>
                 <a href="{% url 'make_appointment' %}" class="list-group-item list-group-item-action " id="makeAppointment">Create Appointment</a>
                 <a href="{% url 'update_appointment' %}" class="list-group-item list-group-item-action active-tab" id="updateAppointment">Update Appointment</a>
